# NewFaceRecognition

./: CMakeLists.txt  OpenTLDConfig.cmake.in  README.md
libkface/libface/: Eigenfaces.cpp  Eigenfaces.h  FaceDetect.cpp  FaceDetect.h  Haarcascades.cpp  Haarcascades.h  LibFace.cpp  LibFace.h  LibFaceConfig.h.cmake  LibFaceCore.h  LibFaceUtils.cpp  LibFaceUtils.h  Tldfaces.cpp  Tldfaces.h
libkface/libkface/: Tldfaces.cpp  Tldfaces.h  Tldrecognition.cpp  Tldrecognition.h  database.cpp  database.h  face.cpp  face.h  facedetector.cpp  facedetector.h  faceitem.cpp  image.cpp  image.h  image_p.h  kfaceutils.cpp  kfaceutils.h  libopencv.h  recognitiondatabase.cpp  recognitiondatabase.h  tldclassify.cpp  tldclassify.h  tlddatabase.cpp  tlddatabase.h  tldface.cpp  tldface.h
libkface/test/: button.cpp  button.h  detect.cpp  faceitem.cpp  fancyrect.cpp  fancyrect.h  mainwindow.cpp  mainwindow.h  marquee.cpp  marquee.h
opentld/: libopentld.h
opentld/cvblobs/: CMakeLists.txt
opentld/libconfig/: CMakeLists.txt  grammar.c  libconfig.c  scanner.c  scanner.h
opentld/libopentld/: CMakeLists.txt  EnsembleClassifier.cpp  ForegroundDetector.cpp~  ImAcq.cpp  TLD.cpp  TLD.h
opentld/tldmain/: CMakeLists.txt  Config.cpp  Config.h  Gui.cpp  Main.cpp  Main.h  Settings.cpp  Settings.h
