add_library(libopentld
    ImAcq.cpp
    BB.cpp
    BBPredict.cpp
    FBTrack.cpp
    Lk.cpp
    Median.cpp
    Clustering.cpp
    DetectionResult.cpp
    DetectorCascade.cpp
    EnsembleClassifier.cpp
    ForegroundDetector.cpp
    MedianFlowTracker.cpp
    NNClassifier.cpp
    TLD.cpp
    TLDUtil.cpp
    VarianceFilter.cpp
    ImAcq.h
    BB.h
    BBPredict.h
    FBTrack.h
    Lk.h
    Median.h
    Clustering.h
    DetectionResult.h
    DetectorCascade.h
    EnsembleClassifier.h
    ForegroundDetector.h
    IntegralImage.h
    MedianFlowTracker.h
    NNClassifier.h
    NormalizedPatch.h
    TLD.h
    TLDUtil.h
    VarianceFilter.h)
target_link_libraries(libopentld ${OpenCV_LIBS})    
